5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1636_869.log
== SUBMITION (2019-04-08 13:45:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.x=float(input("valor a ser pago:"))
if(x>=200):
	x=(x-(x*0.05))
else:
	x=x
print(round(x, 2))
-- EXECUTION TIME:
0.172707
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/869/main.py", line 4, in <module>
    if(x>=200):
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:45:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.x=float(input("valor a ser pago:"))
if(x>=200):
	x=(x-(x*0.05))
else:
	x=x
print(round(x, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x>=200):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:46:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.x=float(input("valor a ser pago:"))
x=input("preco:")
if(x>=200):
	x=(x-(x*0.05))
else:
	x=x
print(round(x, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(x>=200):
TypeError: '>=' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:46:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.x=float(input("valor a ser pago:"))
x=float(input("preco:"))
if(x>=200):
	x=(x-(x*0.05))
else:
	x=x
print(round(x, 2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:47:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.x=float(input("valor a ser pago:"))
x=float(input("preco:"))
if(x>=200):
	x=(x-(x*0.05))
else:
	x=x
print(round(x, 2))
-- EXECUTION TIME:
0.198789
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
